# Assignment_14

./: AS14_Dashboard.ipynb  AS14_Dashboard.py  AS14_Streamlit_Dashboard.py  AS14_covid_insights.py  README.md  pyproject.toml
.devcontainer/: devcontainer.json
data/processed/: df_covid_processed.csv  df_covid_val_pred.csv
src/: extract.ipynb  extract.py  model.py  transform.py
