[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=2.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "ipykernel>=6.31.0",
    "jupyter-dash>=0.4.0",
    "mongomock>=4.3.0",
    "nbformat>=4.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]
